--- a/EchoClip/EchoClip.Services.Implementations/EchoClip.Services.Implementations.csproj
+++ b/EchoClip/EchoClip.Services.Implementations/EchoClip.Services.Implementations.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EchoClip.Models\EchoClip.Models.csproj" />
+    <ProjectReference Include="..\EchoClip.Services.Interfaces\EchoClip.Services.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
