--- a/EchoClip/EchoClip.Services.Interfaces/EchoClip.Services.Interfaces.csproj
+++ b/EchoClip/EchoClip.Services.Interfaces/EchoClip.Services.Interfaces.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EchoClip.Models\EchoClip.Models.csproj" />
+  </ItemGroup>
+
 </Project>
