--- a/EchoClip/EchoClip.gRPC/appsettings.json
+++ b/EchoClip/EchoClip.gRPC/appsettings.json
@@ -10,5 +10,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ConnectionStrings": {
+    "database": "Server=localhost;Database=database;Port=5432;User Id=postgres;Password=admin"
   }
 }
