--- a/EchoClip/EchoClip.Services.Implementations/EchoClip.Services.Implementations.csproj
+++ b/EchoClip/EchoClip.Services.Implementations/EchoClip.Services.Implementations.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EchoClip.Models\EchoClip.Models.csproj" />
+    <ProjectReference Include="..\EchoClip.Repositories.Interfaces\EchoClip.Repositories.Interfaces.csproj" />
     <ProjectReference Include="..\EchoClip.Services.Interfaces\EchoClip.Services.Interfaces.csproj" />
   </ItemGroup>
 
