--- a/EchoClip/EchoClip.Repositories.Interfaces/EchoClip.Repositories.Interfaces.csproj
+++ b/EchoClip/EchoClip.Repositories.Interfaces/EchoClip.Repositories.Interfaces.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EchoClip.Models\EchoClip.Models.csproj" />
+  </ItemGroup>
+
 </Project>
