--- a/EchoClip/EchoClip.gRPC/EchoClip.gRPC.csproj
+++ b/EchoClip/EchoClip.gRPC/EchoClip.gRPC.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 	<Protobuf Include="Protos\auth.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\user.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
